# fts-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt
src/config/: CMakeLists.txt  config.hpp
src/indexer/: CMakeLists.txt  main.cpp
src/libindex/: CMakeLists.txt  libindex.cpp  libindex.hpp
src/libparser/: CMakeLists.txt  libparser.cpp  libparser.hpp
src/libsearcher/: CMakeLists.txt  libsearcher.cpp  libsearcher.hpp
src/libsum/: CMakeLists.txt  libsum.cpp  libsum.hpp
src/parser/: CMakeLists.txt  main.cpp
src/searcher/: CMakeLists.txt  main.cpp
src/sum/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/libindex/: CMakeLists.txt  libindex.test.cpp
test/libparsertest/: CMakeLists.txt  libparser.test.cpp
test/libsearcher/: CMakeLists.txt  libsearcher.test.cpp
test/libsum/: CMakeLists.txt  libsum.test.cpp
